--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.2.1",
     "react-lazy-load-image-component": "^1.6.2",
