--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-lazy-load-image-component": "^1.6.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
+    "sonner": "^1.5.0",
     "sort-by": "^1.2.0",
     "swiper": "^11.1.4"
   },
