--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@smastrom/react-rating": "^1.5.0",
     "aos": "^3.0.0-beta.6",
     "localforage": "^1.10.0",
+    "lodash": "^4.17.21",
     "match-sorter": "^6.3.4",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@types/aos": "^3.0.7",
+    "@types/lodash": "^4.17.6",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-lazy-load-image-component": "^1.6.4",
